# aact

./: .pre-commit-config.yaml  CNAME  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  mypy.yml
0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
0.10.0/search/: search_index.json
dev/: objects.inv  sitemap.xml
dev/api/nodes/: index.html
dev/applications/cogym/: index.html
dev/applications/robot-teleoperation/: index.html
dev/search/: search_index.json
docs/: index.md  install.md  usage.md  why.md
docs/api/: messages.md  nodes.md
docs/applications/: cogym.md  robot-teleoperation.md
docs/plugins/: griffe_doclinks.py
examples/: example.toml  speaker_listener.toml
examples/api_node_examples/: api_client.py  api_node_demo.toml
examples/chatbot_examples/: input.py  nodes.py
examples/exception_examples/: example.toml  exception_node.py
examples/node_manager_examples/: example.toml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/cli/: index.html
latest/api/messages/: index.html
latest/api/nodes/: index.html
latest/applications/robot-teleoperation/: index.html
latest/install/: index.html
latest/search/: search_index.json
latest/usage/: index.html
latest/why/: index.html
src/aact/: __init__.py
src/aact/cli/: __init__.py
src/aact/cli/launch/: __init__.py  launch.py
src/aact/cli/reader/: __init__.py  dataflow_reader.py
src/aact/manager/: __init__.py  manager.py
src/aact/messages/: __init__.py  base.py  commons.py  registry.py  serialization_utils.py
src/aact/nodes/: __init__.py  api.py  base.py  listener.py  performance.py  print.py  random.py  record.py  registry.py  speaker.py  special_print.py  tick.py  transcriber.py  tts.py
src/aact/utils/: __init__.py  tomllib.py  types.py
tests/messages/: test_message.py  test_rest.py
tests/nodes/: main.py  test_node_creation.py
