[project]
name = "aact"
description = "An actor model library for multi-agent/environment interaction in Python based on Redis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.8.2",
    "redis>=5.0.8",
    "requests>=2.32.3",
    "aiofiles>=24.1.0",
    "aiostream>=0.6.2",
    "rq>=1.16.2",
    "typer>=0.12.5",
    "numpy>=1.24.0",
    "tomlkit>=0.13.0; python_version <= '3.10'",
]
dynamic = ["version"]

[tool.hatch]
version = {path = "src/aact/__about__.py"}

[project.optional-dependencies]
typing = [
    "mypy>=0.910",
    "types-requests>=2.32.0.20240712",
    "types-aiofiles>=24.1.0.20240626",
]
vision = [
    "opencv-python"
]
audio = [
    "pyaudio >= 0.2.14",
    "types-pyaudio >= 0.2.16.20240516",
]
google = [
    "google-cloud-speech>=2.27.0",
    "google-cloud-texttospeech>=2.17.2",
]
gui = [
    "nicegui",
    "pywebview>=3.4.0",
]
ai = [
    "openai"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "pydantic.v1.mypy",
]

[project.scripts]
aact = 'aact.cli:app'
